--- a/src/app/modules/cv-generator/cv-generator/personal/personal.component.html
+++ b/src/app/modules/cv-generator/cv-generator/personal/personal.component.html
@@ -200,7 +200,7 @@
                             <input type="text" id="siblingsjob" [(ngModel)]="sibling.job" class="form-control" name="siblingsjob" />
                         </div> 
                     </div>
-                    <div class="col-md-2" style="margin: auto;padding-top: 15px;"> 
+                    <div class="col-md-2" style="margin: auto;padding-top: 15px; margin-bottom: 25px;"> 
                         <div class=" ">
                             <span *ngIf="i!=0" class="clickable" (click)="deleteSiblingObj(i)">&#10060;</span>
                             <span *ngIf="i!=0" class="clickable delete-text" (click)="deleteSiblingObj(i)"
@@ -219,7 +219,7 @@
     
     
             <div class="row">
-                <div class="col-md-12" style="display: flex; align-items:center;">
+                <div class="col-md-12" style="display: flex; align-items:center; margin-top: -15px;">
                      <div class="plus-icon clickable" (click)="addSibling()"> </div>
                 <span class="icon-after-text clickable" (click)="addSibling()"> Geschwister hinzufügen </span>
                 </div>
