--- a/src/app/modules/shared/components/about/about.component.scss
+++ b/src/app/modules/shared/components/about/about.component.scss
@@ -11,3 +11,14 @@
     font-family: sans-serif;
     margin: 20px;
 }
+
+.content {
+    min-height: 35vh;
+    width: 60vw;
+}
+@media only screen and (max-width: 768px) {
+    .content {
+         width: 100vw;
+    }
+
+}
