--- a/src/app/modules/shared/components/impressum/impressum.component.scss
+++ b/src/app/modules/shared/components/impressum/impressum.component.scss
@@ -21,3 +21,9 @@
     font-family: sans-serif;
     margin: 50px 0 20px 50px;
 }
+@media only screen and (max-width: 768px) {
+    .content {
+         width: 100vw;
+    }
+
+}
