--- a/src/app/modules/cv-generator/cv-generator/cv-pdf-preview/cv-pdf-preview.component.html
+++ b/src/app/modules/cv-generator/cv-generator/cv-pdf-preview/cv-pdf-preview.component.html
@@ -214,8 +214,8 @@
             </ng-container>
 
         </div>
-        <div class="mb-10"></div>
-        <a class="next-btn back-btn" (click)="onBack()">zurück</a>
-        <a class="next-btn" (click)="convertToPDF()">Download PDF</a>
+        <div class="mb-50"></div>
+        <a class="next-btn back-btn btn1" (click)="onBack()">zurück</a>
+        <a class="next-btn  btn2" (click)="convertToPDF()">Download PDF</a>
     </div>
 </div>
