--- a/src/app/modules/cv-generator/cv-generator/cv-pdf-preview/cv-pdf-preview.component.html
+++ b/src/app/modules/cv-generator/cv-generator/cv-pdf-preview/cv-pdf-preview.component.html
@@ -1,5 +1,5 @@
 <div class="cv-generator" id="cvGenerator">
-    <div class="content auto-Width">
+    <div class="content auto-Width" id="pdf-make">
         <div class="page" id="pdf-page" #content>
             <div class="header big-font">
                 Lebenslauf
