--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -84,7 +84,7 @@
 
 
  -->
-<nav class="navbar sticky-top navbar-expand-lg bg-dark" style="background: #fdf5df !important;">
+<nav class="navbar sticky-top navbar-expand-lg bg-dark" style="background: #ffffff !important;">
     <div class="container">
       <a class="navbar-brand clickable" (click)="navigateTo('/home')">
         <img src="./assets/images/logo2.png" alt="">
