--- a/src/app/modules/layout/header/header.component.html
+++ b/src/app/modules/layout/header/header.component.html
@@ -85,7 +85,7 @@
 
  -->
 <nav class="navbar sticky-top navbar-expand-lg bg-dark" style="background: #ffffff !important;">
-    <div class="container">
+    <div class="container-fluid">
       <a class="navbar-brand clickable" (click)="navigateTo('/home')">
         <img src="./assets/images/logo2.png" alt="">
       </a>
