--- a/src/app/modules/motivation-sschreiben/step-three-lehr/step-three-lehr.component.html
+++ b/src/app/modules/motivation-sschreiben/step-three-lehr/step-three-lehr.component.html
@@ -44,18 +44,18 @@
         <div class="row">
 
             <div class="col-md-4 clickable" style="display: flex; align-items: center;">
-                <label for="Lebenslauf" class="">Lebenslauf</label>
+                <label for="Lebenslauf" class="" style=" margin-bottom: 0; margin-right: 5px;">Lebenslauf</label>
                 <input type="checkbox" [(ngModel)]="commonService.lehrStepThreeData.lebenslauf" name="Lebenslauf"
                     class="height-18" id="Lebenslauf" value="value">
             </div> &nbsp;&nbsp;&nbsp;
             <div class="col-md-4 clickable" style="display: flex; align-items: center;">
-                <label for="Stellwerktest" class=" ">Stellwerktest</label>
+                <label for="Stellwerktest" class=" " style=" margin-bottom: 0; margin-right: 5px">Stellwerktest</label>
                 <input type="checkbox" [(ngModel)]="commonService.lehrStepThreeData.stellwerktest" name="Stellwerktest"
                 class="height-18" id="Stellwerktest" value="value">
             </div>
             &nbsp;&nbsp;&nbsp;
             <div class="col-md-4 clickable" style="display: flex; align-items: center;">
-                <label for="Eigene" class="label-float-right">Eigene:</label>
+                <label for="Eigene" class="label-float-right" >Eigene:</label>
                 <input type="text" [(ngModel)]="commonService.lehrStepThreeData.eigene" id="Eigene" class="col-9 "
                 name="Eigene" maxlength="50" />
             </div>
@@ -64,13 +64,13 @@
          
         <div class="row">
             <div class="col-md-4 clickable" style="display: flex; align-items: center;">
-                <label for="Zeugnisse" class="">Zeugnisse</label>
+                <label for="Zeugnisse" class="" style=" margin-bottom: 0; margin-right: 5px">Zeugnisse</label>
                 <input type="checkbox" [(ngModel)]="commonService.lehrStepThreeData.zeugnisse" name="Zeugnisse"
                     class="height-18" id="Zeugnisse" value="value">
             </div>
 &nbsp;&nbsp;&nbsp;
             <div class="col-md-4 clickable" style="display: flex; align-items: center;">
-                <label for="Multicheck" class=" ">Multicheck</label>
+                <label for="Multicheck" class=" " style=" margin-bottom: 0; margin-right: 5px">Multicheck</label>
                 <input type="checkbox" [(ngModel)]="commonService.lehrStepThreeData.multicheck" name="Multicheck"
                     class="height-18" id="Multicheck" value="value">
 
