--- a/src/app/modules/cv-generator/cv-generator/personal/personal.component.html
+++ b/src/app/modules/cv-generator/cv-generator/personal/personal.component.html
@@ -219,7 +219,7 @@
     
     
             <div class="row">
-                <div class="col-md-12" style="display: flex; align-items:center; margin-top: -15px;">
+                <div class="col-md-12 mbl-res" style="display: flex; align-items:center; margin-top: -15px;">
                      <div class="plus-icon clickable" (click)="addSibling()"> </div>
                 <span class="icon-after-text clickable" (click)="addSibling()"> Geschwister hinzufügen </span>
                 </div>
