--- a/src/app/modules/cv-generator/cv-generator/trail-and-reference/trail-and-reference.component.html
+++ b/src/app/modules/cv-generator/cv-generator/trail-and-reference/trail-and-reference.component.html
@@ -125,7 +125,7 @@
 
                
             <div class="row" style="margin-top: -15px;">
-                <div class="col-md-12">
+                <div class="col-md-12 mbl-res">
                     <div class="form-group" style="display: flex; align-items: center;  ">
                                              <div class="plus-icon clickable" (click)="addTrail()"> </div>
              <span class="icon-after-text clickable" (click)="addTrail()"> Schnupperlehre hinzufügen </span>
@@ -206,7 +206,7 @@
         </ng-container>
 
         <div class="row"  style="margin-top: -15px;">
-            <div class="col-md-6" style="display: flex; align-items: center;  ">
+            <div class="col-md-6 mbl-res" style="display: flex; align-items: center;  ">
                 <div class="plus-icon clickable" (click)="addReferenzen()"> </div>
             <span class="icon-after-text clickable" (click)="addReferenzen()"> Referenz hinzufügen </span>
             </div>
