--- a/src/app/modules/cv-generator/cv-generator/school-and-hobbys/school-and-hobbys.component.html
+++ b/src/app/modules/cv-generator/cv-generator/school-and-hobbys/school-and-hobbys.component.html
@@ -60,7 +60,7 @@
 
 
         <div class="row">
-            <div class="col-md-12" style="display: flex; margin-top: -15px;">
+            <div class="col-md-12 mbl-res" style="display: flex; margin-top: -15px;">
                 <div class="plus-icon clickable margin-top-0" (click)="addSchooling()"> </div>
                 <span class="mt-0-6 icon-after-text clickable" (click)="addSchooling()"> Schule hinzufügen </span>
         
@@ -119,7 +119,7 @@
                     </div>
                 </ng-container>
                 <div class="row" style="margin-top: -15px;">
-                    <div class="col-md-12" style="display: flex;align-items: center; ">
+                    <div class="col-md-12 mbl-res" style="display: flex;align-items: center; ">
                         <div class="plus-icon clickable margin-top-0" (click)="addlanguage()"> </div>
                     <span class="icon-after-text clickable" (click)="addlanguage()"> Sprache hinzufügen </span>
                     </div>
@@ -159,7 +159,7 @@
         </ng-container>
 
         <div class="row" style="margin-top: -15px;">
-            <div class="col-md-12" style="display: flex; align-items: center;">
+            <div class="col-md-12 mbl-res" style="display: flex; align-items: center;">
                 <div class="plus-icon clickable" (click)="addHobby()"> </div>
             <span class="icon-after-text clickable" (click)="addHobby()"> Hobby hinzufügen </span>
             </div>
