--- a/src/app/modules/cv-generator/cv-generator/school-and-hobbys/school-and-hobbys.component.html
+++ b/src/app/modules/cv-generator/cv-generator/school-and-hobbys/school-and-hobbys.component.html
@@ -163,7 +163,6 @@
                 <div class="plus-icon clickable" (click)="addHobby()"> </div>
             <span class="icon-after-text clickable" (click)="addHobby()"> Hobby hinzufügen </span>
             </div>
-            
         </div>
 
         <br>
@@ -171,7 +170,7 @@
         <br>
         <br>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12" style="margin-top:70px;">
                 <a class="next-btn back-btn" (click)="onBack()">zurück</a>
             <a class="next-btn" (click)="onNext()">weiter</a>
             </div>
