--- a/src/app/modules/motivation-sschreiben/ms-lehr-preview/ms-lehr-preview.component.html
+++ b/src/app/modules/motivation-sschreiben/ms-lehr-preview/ms-lehr-preview.component.html
@@ -56,8 +56,7 @@
           <p align="justify">Freundliche Grüsse
           </p>
 
-          <div class="mb-10"></div>
-          <p align="justify">
+           <p align="justify" style="margin-top: -40px; margin-bottom: 60px;">
             {{commonService.msPersonalForm?.firstName +' '+commonService.msPersonalForm?.lastName}}
             <!-- Mike Muster -->
           </p>
